css/skeleton-grid.css
.container {
    position:relative;
    width:100%;
    max-width:100%;
    margin:0 auto;
    padding:0 2rem;
    box-sizing:border-box 
}
.column,
.columns {
    width:100%;
    float:left;
    box-sizing:border-box
}

/* For devices larger than 400px */
@media (min-width: 400px) {
  .container {
    width: 85%;
    padding: 0; }
}

/* For devices larger than 550px */
@media (min-width: 550px) {
  .container {
    width: 80%; }
  .column,
  .columns {
    margin-left: 4%; }
  .column:first-child,
  .columns:first-child {
    margin-left: 0; }
}

/* #Main - Fixed width 12 Column Widths */

.one.column,
.one.columns                    { width: 4.66666666667%; }
.two.columns                    { width: 13.3333333333%; }
.three.columns                  { width: 22%;            }
.four.columns                   { width: 30.6666666667%; }
.five.columns                   { width: 39.3333333333%; }
.six.columns                    { width: 48%;            }
.seven.columns                  { width: 56.6666666667%; }
.eight.columns                  { width: 65.3333333333%; }
.nine.columns                   { width: 74.0%;          }
.ten.columns                    { width: 82.6666666667%; }
.eleven.columns                 { width: 91.3333333333%; }
.twelve.columns                 { width: 100%; margin-left: 0; }

.one-third.column               { width: 30.6666666667%; }
.two-thirds.column              { width: 65.3333333333%; }

.one-half.column                { width: 48%; }

.offset-by-one.column,
.offset-by-one.columns          { margin-left: 8.66666666667%; }
.offset-by-two.column,
.offset-by-two.columns          { margin-left: 17.3333333333%; }
.offset-by-three.column,
.offset-by-three.columns        { margin-left: 26%;            }
.offset-by-four.column,
.offset-by-four.columns         { margin-left: 34.6666666667%; }
.offset-by-five.column,
.offset-by-five.columns         { margin-left: 43.3333333333%; }
.offset-by-six.column,
.offset-by-six.columns          { margin-left: 52%;            }
.offset-by-seven.column,
.offset-by-seven.columns        { margin-left: 60.6666666667%; }
.offset-by-eight.column,
.offset-by-eight.columns        { margin-left: 69.3333333333%; }
.offset-by-nine.column,
.offset-by-nine.columns         { margin-left: 78.0%;          }
.offset-by-ten.column,
.offset-by-ten.columns          { margin-left: 86.6666666667%; }
.offset-by-eleven.column,
.offset-by-eleven.columns       { margin-left: 95.3333333333%; }

.offset-by-one-third.column,
.offset-by-one-third.columns    { margin-left: 34.6666666667%; }
.offset-by-two-thirds.column,
.offset-by-two-thirds.columns   { margin-left: 69.3333333333%; }

.offset-by-one-half.column,
.offset-by-one-half.columns     { margin-left: 52%; }

/* #Additional - Flexible 16 Column Widths */
.container-fluid                                  { width: 95%; padding-right:15px;padding-left:15px;margin-right:auto;margin-left:auto;box-sizing:border-box}
.container-fluid .column,
.container-fluid .columns                         { margin-left: 0.78125%; margin-right: 0.78125%;box-sizing:border-box;}
.container-fluid .column:first-child:not([class^="offset"]),.columns:first-child:not([class^="offset"]){margin-left:0}

.container-fluid .one.column,
.container-fluid .one.columns                     { width: 4.6875%; }
.container-fluid .two.columns                     { width: 10.9375%; }
.container-fluid .three.columns                   { width: 17.1875%; }
.container-fluid .four.columns                    { width: 23.4375%; }
.container-fluid .five.columns                    { width: 29.6875%; }
.container-fluid .six.columns                     { width: 35.9375%; }
.container-fluid .seven.columns                   { width: 42.1875%; }
.container-fluid .eight.columns                   { width: 48.4375%; }
.container-fluid .nine.columns                    { width: 54.6875%; }
.container-fluid .ten.columns                     { width: 60.9375%; }
.container-fluid .eleven.columns                  { width: 67.1875%; }
.container-fluid .twelve.columns                  { width: 73.4375%; }
.container-fluid .thirteen.columns                { width: 79.6875%; }
.container-fluid .fourteen.columns                { width: 85.9375%; }
.container-fluid .fifteen.columns                 { width: 92.1875%; }
.container-fluid .sixteen.columns                 { width: 98.4375%; margin-left:0;}

.container-fluid .one-third.column                { width: 31.7708%; }
.container-fluid .two-thirds.column               { width: 65.1041%; }

.container-fluid .offset-by-one                   { padding-left: 6.25%; }
.container-fluid .offset-by-two                   { padding-left: 12.5%; }
.container-fluid .offset-by-three                 { padding-left: 18.75%; }
.container-fluid .offset-by-four                  { padding-left: 25%; }
.container-fluid .offset-by-five                  { padding-left: 31.25%; }
.container-fluid .offset-by-six                   { padding-left: 37.5%; }
.container-fluid .offset-by-seven                 { padding-left: 43.75%; }
.container-fluid .offset-by-eight                 { padding-left: 50%; }
.container-fluid .offset-by-nine                  { padding-left: 56.25%; }
.container-fluid .offset-by-ten                   { padding-left: 62.5%; }
.container-fluid .offset-by-eleven                { padding-left: 68.75%; }
.container-fluid .offset-by-twelve                { padding-left: 75%; }
.container-fluid .offset-by-thirteen              { padding-left: 81.25%; }
.container-fluid .offset-by-fourteen              { padding-left: 87.5%; }
.container-fluid .offset-by-fifteen               { padding-left: 93.75%; }

.container-fluid .full-width.column,.full-width.columns            { width:100%; margin-left:0; margin-right:0}

.container:after{
    content:"\0020";
    display:block;
    height:0;
    clear:both;
    visibility:hidden
}

.clearfix,.row{
    zoom:1
}
.clearfix:before,.clearfix:after,.row:before,.row:after{
    content:"\0020";
    display:block;
    overflow:hidden;
    visibility:hidden;
    width:0;
    height:0
}
.clearfix:after,.row:after{
    clear:both
}
.clear{
    clear:both;
    display:block;
    overflow:hidden;
    visibility:hidden;
    width:0;
    height:0
}

